# launcher-utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/launcher-utils/: geode.hpp  jni.hpp
src/: main.cpp
test/: CMakeLists.txt  base.hpp  controller.cpp  mod.json  vibration.cpp
